<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_wallet"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/animation_wallet_vreate2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_wallet_notices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/wallet_notices"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/md_grey_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_wallet" />

    <Button
        android:id="@+id/btn_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_wallet"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wallet_notices" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/md_grey_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_wallet" />

    <EditText
        android:id="@+id/edt_private_key"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/search"
        android:hint="@string/private_key"
        android:padding="8dp"
        android:textColorHint="@color/md_blue_grey_600"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn_import_wallet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/import_wallet_privatekey"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_private_key" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_import_wallet" />

    <EditText
        android:id="@+id/edt_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search"
        android:hint="@string/mnemonic"
        android:padding="8dp"
        android:textColorHint="@color/md_blue_grey_600"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <Button
        android:id="@+id/btn_import_wallet_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/import_wallet_mnemonic"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mnemonic" />

</androidx.constraintlayout.widget.ConstraintLayout>