<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/md_grey_100"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/md_grey_100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_image">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/category"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/g1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/category_title"
                app:layout_constraintTop_toTopOf="@+id/category_title" />

            <TextView
                android:id="@+id/state_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/state"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="@+id/g1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/state_title"
                app:layout_constraintTop_toTopOf="@+id/state_title" />

            <TextView
                android:id="@+id/title_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:gravity="center"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/title_title"
                app:layout_constraintTop_toTopOf="@+id/title_title" />

            <TextView
                android:id="@+id/desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/desc"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:justificationMode="inter_word"
                android:textColor="@color/md_grey_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/desc_title"
                app:layout_constraintTop_toTopOf="@+id/desc_title" />

            <TextView
                android:id="@+id/start_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/start"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <TextView
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/g1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/start_title"
                app:layout_constraintTop_toTopOf="@+id/start_title" />

            <TextView
                android:id="@+id/end_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/end"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="@+id/g1"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <TextView
                android:id="@+id/end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/end_title"
                app:layout_constraintTop_toTopOf="@+id/end_title" />


            <TextView
                android:id="@+id/country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/country"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start" />

            <TextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/g1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/country_title"
                app:layout_constraintTop_toTopOf="@+id/country_title" />

            <TextView
                android:id="@+id/private_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/private_"
                android:textStyle="bold"
                android:textColor="@color/md_grey_600"
                app:layout_constraintStart_toStartOf="@+id/g1"
                app:layout_constraintTop_toBottomOf="@+id/end" />

            <TextView
                android:id="@+id/is_private"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="---"
                android:textColor="@color/md_grey_600"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/private_title"
                app:layout_constraintTop_toTopOf="@+id/private_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>