<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/md_amber_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_copy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_address"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_wallet"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:src="@drawable/ic_wallet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginStart="-20dp"
            android:background="@color/md_grey_400"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_wallet"
            app:layout_constraintStart_toEndOf="@+id/iv_wallet">

            <TextView
                android:id="@+id/tv_wallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/md_grey_400"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:text="0 ETH"
                android:textColor="@color/md_white_1000"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/ed_nft_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/search"
        android:hint="NFT name"
        android:padding="8dp"
        android:textColorHint="@color/md_blue_grey_600"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/ed_nft_symbol"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/search"
        android:hint="NFT symbol"
        android:padding="8dp"
        android:singleLine="true"
        android:textColorHint="@color/md_blue_grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nft_name" />

    <EditText
        android:id="@+id/ed_nft_desc"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/search"
        android:hint="NFT description"
        android:padding="8dp"
        android:textColorHint="@color/md_blue_grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nft_symbol" />

    <TextView
        android:id="@+id/tv_contract_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/contract_address"
        android:textColor="@color/md_blue_grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nft_desc" />

    <TextView
        android:id="@+id/tv_contract_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/ic_copy"
        android:drawableTint="@color/md_grey_400"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contract_title" />

    <TextView
        android:id="@+id/tv_token_idtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/token_id"
        android:textColor="@color/md_blue_grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contract_address" />

    <TextView
        android:id="@+id/tv_token_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:drawableTint="@color/md_grey_400"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_token_idtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/mint"
        android:textColor="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pr_mint"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mint"
        app:layout_constraintEnd_toEndOf="@+id/btn_mint"
        app:layout_constraintStart_toStartOf="@+id/btn_mint"
        app:layout_constraintTop_toTopOf="@+id/btn_mint" />

</androidx.constraintlayout.widget.ConstraintLayout>